Финальное задание 6.